--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </button>
         </div>
     </header>
-    <main class="main">
+   <main class="main">
         <section class="hero">
             <div class="container">
                 <div class="hero__inner">
@@ -71,26 +71,27 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section class="about" id="about-me">
             <div class="container">
                 <picture class="about__pictures">
                     <source
                     type="image/webp"
-                    media="(max-width: 425px)"
-                    srcset=" ./images/about-mobile.webp 1x, ./images/about-mobile@2x.webp 2x"/>
+                    media="(max-width: 680px)"
+                    srcset="./images/about-mobile.webp 1x, ./images/about-mobile@2x.webp 2x"/>
                     <source
                     type="image/webp"
-                    media="(max-width: 768px)"
-                    srcset=" ./images/about-tablet.webp 1x, ./images/about-tablet@2x.webp 2x"/>
+                    media="(max-width: 950px)"
+                    srcset="./images/about-tablet.webp 1x, ./images/about-tablet@2x.webp 2x"/>
+                    
                     <source
                     type="image/webp" 
                     srcset="./images/about.webp 1x, ./images/about@2x.webp 2x"
                     />
                     <source
-                    media="(max-width: 425px)"
+                    media="(max-width: 680px)"
                     srcset="./images/about-mobile.jpg 1x, ./images/about-mobile@2x.jpg 2x"/>
                     <source
-                    media="(max-width: 768px)"
+                    media="(max-width: 950px)"
                     srcset="./images/about-tablet.jpg  1x, ./images/about-tablet@2x.jpg 2x"/>
                     
                     <img
